--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="cl.ucn.disc.dsm.clasesdsm">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ClasesDSM"
         tools:targetApi="31">
+        <activity
+            android:name=".ActivityWeb"
+            android:exported="false"
+            android:label="@string/title_activity_web"
+            android:theme="@style/Theme.ClasesDSM.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
